Devops/inspect.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-inspector
  namespace: prowler
spec:
  containers:
    - name: inspector
      image: alpine
      command: ["sh", "-c", "sleep 3600"]  # Keep the pod alive for 1 hour
      volumeMounts:
        - name: prowler-output
          mountPath: /prowler/output  # Same path as in prowler pod
  volumes:
    - name: prowler-output
      persistentVolumeClaim:
        claimName: prowler-output-pvc  # Same PVC as prowler pod
